--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-spring": "^9.2.3",
     "web-vitals": "^1.1.2",
     "workbox-background-sync": "^5.1.4",
