--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.5",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
