--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.5",
     "sequelize": "^6.6.5"
