--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-spring": "^9.3.0",
+    "react-svg": "^14.1.3",
     "spinners-react": "^1.0.6",
     "web-vitals": "^1.1.2",
     "workbox-background-sync": "^5.1.4",
