--- a/client/package.json
+++ b/client/package.json
@@ -6,36 +6,38 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.4",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "core-js": "^3.19.1",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.4",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "^4.0.3",
     "react-spinners": "^0.11.0",
-    "react-spring": "^9.3.0",
+    "react-spring": "^9.3.1",
     "react-svg": "^14.1.3",
     "spinners-react": "^1.0.6",
-    "web-vitals": "^1.1.2",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.2",
+    "workbox-background-sync": "^6.4.1",
+    "workbox-broadcast-update": "^6.4.1",
+    "workbox-cacheable-response": "^6.4.1",
+    "workbox-core": "^6.4.1",
+    "workbox-expiration": "^6.4.1",
+    "workbox-google-analytics": "^6.4.1",
+    "workbox-navigation-preload": "^6.4.1",
+    "workbox-precaching": "^6.4.1",
+    "workbox-range-requests": "^6.4.1",
+    "workbox-routing": "^6.4.1",
+    "workbox-strategies": "^6.4.1",
+    "workbox-streams": "^6.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
