--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,9 @@
 # syntax=docker/dockerfile:1
 
 FROM node:16.13.1
-WORKDIR /app
+WORKDIR /App
 COPY package.json .
 COPY package-lock.json .
 COPY . .
 RUN npm i
-EXPOSE 3000
 CMD ["npm", "start"]
