--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,8 +1,6 @@
-# syntax=docker/dockerfile:1
-
 FROM node:16.13.1
 WORKDIR /app
 COPY ./package.json ./
 RUN npm i
 COPY . .
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
