--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.5",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.19.2",
@@ -19,7 +20,7 @@
     "react-full-screen": "^1.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "react-spring": "^9.3.2",
     "react-svg": "^14.1.3",
