--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "10.4.5",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.19.2",
